Added jenkins user to sudo

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-.vscode
+.vscode/
+*.Dockerfile
+*.swp
 
 # Serverless directories
-.serverless
+.serverless/
