testing resource permitting

--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -28,7 +28,7 @@ try {
         }
 
         stage("Load Resources"){
-            writeFile: file:"/tmp/get-release-from-git-and-increment.sh", text: "/scripts/get-release-from-git-and-increment.sh"
+            writeFile file:"/tmp/get-release-from-git-and-increment.sh", text: "/scripts/get-release-from-git-and-increment.sh"
             sh "chmod +x ./tmp/get-release-from-git-and-increment.sh"
         }
 
